--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,1 +1,56 @@
+* {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+        "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    min-height: 100vh;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    background-color: #f3d7d7;
+}
+.pin-group {
+    display: flex;
+    width: 100%;
+    max-width: 360px;
+    -moz-column-gap: 10px;
+         column-gap: 10px;
+}
+
+.pin-input {
+    width: 100%;
+    height: 60px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 32px;
+    font-weight: bold;
+    line-height: 1;
+    background-color: #fff;
+    color: #eb1414;
+}
+.pin-input:focus {
+    border: 2px solid #f17979;
+    box-shadow: 0 0 2px 2px #f15151;
+    outline: none;
+}
+.mt-10 {
+    margin-top: 10px;
+}
+.reset {
+    color: #2406ce;
+    cursor: pointer;
+}
+.result-title {
+    color: #eb1414;
+}
+.text-center {
+    text-align: center;
+}
 
